// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OnDemand Radio Page  should match snapshot for AMP 1`] = `
@keyframes animation-0 {
  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-1 {
  width: 100%;
}

@supports (display: grid) {
  .emotion-1 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(8, 1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-1 {
      grid-template-columns: repeat(20, 1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width: 80rem) {
  .emotion-1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-3 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-3 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-3 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-3 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-3 {
    margin-right: 16.666666666666668%;
  }
}

@media (min-width: 80rem) {
  .emotion-3 {
    margin-right: 33.333333333333336%;
  }
}

@supports (display: grid) {
  .emotion-3 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-3 {
      grid-template-columns: repeat(12, 1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
  }
}

.emotion-5 {
  display: grid;
  display: -ms-grid;
  -ms-grid-columns: 1fr 2fr;
  grid-template-columns: 1fr 2fr;
}

@media (min-width: 63rem) {
  .emotion-5 {
    padding-top: 1.5rem;
  }
}

@media (max-width: 24.9375rem) {
  .emotion-5 {
    -ms-grid-columns: 1fr;
    grid-template-columns: 1fr;
  }
}

.emotion-7 {
  -ms-grid-column: 1;
}

@media (max-width: 24.9375rem) {
  .emotion-7 {
    display: none;
  }
}

.emotion-9 {
  padding: 2rem 0 1.5rem;
  padding-left: 1rem;
}

@media (max-width: 22.4375rem) {
  .emotion-9 {
    display: none;
  }
}

.emotion-11 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #F2F2F2;
  -webkit-background-position: center center;
  background-position: center center;
  background-repeat: no-repeat;
  -webkit-background-size: 60px 17px;
  background-size: 60px 17px;
  padding-bottom: 100%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

@media (min-width: 25rem) {
  .emotion-11 {
    -webkit-background-size: 77px 22px;
    background-size: 77px 22px;
  }
}

@media (min-width: 63rem) {
  .emotion-11 {
    -webkit-background-size: 93px 27px;
    background-size: 93px 27px;
  }
}

.emotion-13 {
  -ms-grid-column: 2;
  margin-bottom: 1rem;
}

.emotion-16 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  display: block;
  margin: 0;
  padding: 2rem 0;
  padding: 2rem 0 1rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-16 {
    font-size: 1.75rem;
    line-height: 2.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-16 {
    font-size: 2.5rem;
    line-height: 3.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-16 {
    padding: 2.5rem 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-16 {
    padding: 2rem 0 1rem;
  }
}

@media (max-width: 62.9375rem) {
  .emotion-16 {
    padding: 2rem 0 0.5rem;
  }
}

.emotion-18 {
  display: inline-block;
  width: 100%;
  padding-bottom: 0.5rem;
  word-break: break-word;
  font-size: 1.25rem;
  line-height: 1.75rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-18 {
    font-size: 1.375rem;
    line-height: 1.875rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-18 {
    font-size: 1.75rem;
    line-height: 2.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-18 {
    padding-bottom: 0;
    word-break: break-word;
    line-height: 3.5rem;
  }
}

.emotion-20 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-22 {
  font-size: 1.25rem;
  line-height: 1.75rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  margin: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-22 {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-22 {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

.emotion-24 {
  font-size: 0.9375rem;
  line-height: 1.5rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
  color: #6E6E73;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-24 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-24 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

@media (max-width: 62.9375rem) {
  .emotion-24 {
    padding-bottom: 0.5rem;
  }
}

.emotion-26 {
  position: relative;
}

.emotion-28 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.no-js .emotion-28 {
  display: none;
}

.emotion-30 {
  width: 64px;
  height: 64px;
  stroke: currentColor;
  will-change: transform;
}

@media (prefers-reduced-motion: no-preference) {
  .emotion-30 {
    -webkit-animation: animation-0 1.1s 3 linear;
    animation: animation-0 1.1s 3 linear;
  }
}

.emotion-33 amp-iframe,
.emotion-33 div>iframe {
  width: calc(100% + 1rem);
  margin: 0 -0.5rem;
}

@media (min-width: 25rem) {
  .emotion-33 amp-iframe,
  .emotion-33 div>iframe {
    width: calc(100% + 2rem);
    margin: 0 -1rem;
  }
}

.emotion-35 {
  height: 165px;
  position: relative;
  margin-bottom: 1rem;
}

@media (min-width: 63rem) {
  .emotion-35 {
    margin-bottom: 2rem;
  }
}

<div>
  <amp-analytics>
    <script
      type="application/json"
    >
      {"transport":{"beacon":false,"xhrpost":false,"image":true},"requests":{"pageview":"\${base}s=598343&s2=68&p=pashto.bbc_pashto_radio.w3ct0lz1.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn%3Abbc%3Apips%3Aw3ct0lz1]&x2=[amp]&x3=[news-pashto]&x4=[ps]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[player-episode]&x8=[simorgh]&x9=[%D9%85%D8%A7%DA%9A%D8%A7%D9%85%D9%86%DB%8D%2B%D8%AE%D9%BE%D8%B1%D9%88%D9%86%D9%87%2B-%2BBBC%2BNews%2B%D9%BE%DA%9A%D8%AA%D9%88]&ref=\${documentReferrer}"},"triggers":{"trackPageview":{"on":"visible","request":"pageview"}}}
    </script>
  </amp-analytics>
  <div>
    chartbeat
  </div>
  <amp-analytics
    type="comscore"
  >
    <script
      type="application/json"
    >
      {"vars":{"c2":"17986528"},"extraUrlParams":{"comscorekw":"amp"}}
    </script>
  </amp-analytics>
  <main
    class="emotion-0 emotion-1 emotion-2"
    dir="rtl"
    role="main"
  >
    <div
      class="emotion-3 emotion-2"
      dir="rtl"
    >
      <div
        class="emotion-5 emotion-6"
        dir="rtl"
      >
        <div
          class="emotion-7 emotion-8"
        >
          <div
            class="emotion-9 emotion-10"
            data-e2e="on-demand-image"
            dir="rtl"
          >
            <div
              class="emotion-11 emotion-12"
              data-e2e="image-placeholder"
            >
              <amp-img
                alt="BBC News پښتو"
                attribution=""
                height="240"
                layout="responsive"
                src="https://ichef.bbci.co.uk/images/ic/128x128/p08b23c8.png"
                srcset="https://ichef.bbci.co.uk/images/ic/128x128/p08b23c8.png 128w,https://ichef.bbci.co.uk/images/ic/240x240/p08b23c8.png 240w,https://ichef.bbci.co.uk/images/ic/480x480/p08b23c8.png 480w"
                width="240"
              />
            </div>
          </div>
        </div>
        <div
          class="emotion-13 emotion-14"
        >
          <h1
            class=" emotion-15 emotion-16 emotion-17"
            id="content"
            tabindex="-1"
          >
            <span
              role="text"
            >
              <span
                class="emotion-18 emotion-19"
              >
                ماښامنۍ خپرونه
              </span>
              <span
                class="emotion-20 emotion-21"
              >
                , 
              </span>
              <span
                class="emotion-22 emotion-23"
              >
                ۱ می ۲۰۲۰
              </span>
            </span>
          </h1>
          <p
            class="emotion-24 emotion-25"
          >
            د بي بي سي ورلډ سروس څخه پروګرام کول
          </p>
        </div>
      </div>
      <div
        class="emotion-26 emotion-27"
      >
        <div
          aria-hidden="true"
          class="emotion-28 emotion-29"
          data-testid="audio-loader-overlay"
        >
          <svg
            class="emotion-30 emotion-31"
            focusable="false"
            height="38"
            viewBox="0 0 38 38"
            width="38"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              stroke-width="2"
              transform="translate(1 1)"
            >
              <circle
                cx="18"
                cy="18"
                r="18"
                stroke-opacity="0.2"
              />
              <path
                d="M36 18c0-9.94-8.06-18-18-18"
              />
            </g>
          </svg>
        </div>
        <div
          class="emotion-32 emotion-33 emotion-34"
        >
          <div
            class="emotion-35 emotion-36"
          >
            <amp-iframe
              allowfullscreen="allowfullscreen"
              data-e2e="media-player"
              frameborder="0"
              layout="fill"
              sandbox="allow-scripts allow-same-origin"
              scrolling="no"
              src="https://polling.test.bbc.co.uk/ws/av-embeds/media/pashto/bbc_pashto_radio/w3ct0lz1/ps/amp?morph_env=live"
              title="اډیو پلیئر"
            >
              <amp-img
                alt=""
                attribution=""
                data-e2e="media-player__placeholder"
                height="16"
                layout="fill"
                placeholder="true"
                src="http://localhost:7080/images/amp_audio_placeholder.png"
                width="9"
              />
              <noscript />
            </amp-iframe>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`OnDemand Radio Page  should match snapshot for Canonical 1`] = `
@keyframes animation-0 {
  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-1 {
  width: 100%;
}

@supports (display: grid) {
  .emotion-1 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(8, 1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-1 {
      grid-template-columns: repeat(20, 1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width: 80rem) {
  .emotion-1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-3 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-3 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-3 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-3 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-3 {
    margin-right: 16.666666666666668%;
  }
}

@media (min-width: 80rem) {
  .emotion-3 {
    margin-right: 33.333333333333336%;
  }
}

@supports (display: grid) {
  .emotion-3 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-3 {
      grid-template-columns: repeat(12, 1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
  }
}

.emotion-5 {
  display: grid;
  display: -ms-grid;
  -ms-grid-columns: 1fr 2fr;
  grid-template-columns: 1fr 2fr;
}

@media (min-width: 63rem) {
  .emotion-5 {
    padding-top: 1.5rem;
  }
}

@media (max-width: 24.9375rem) {
  .emotion-5 {
    -ms-grid-columns: 1fr;
    grid-template-columns: 1fr;
  }
}

.emotion-7 {
  -ms-grid-column: 1;
}

@media (max-width: 24.9375rem) {
  .emotion-7 {
    display: none;
  }
}

.emotion-9 {
  padding: 2rem 0 1.5rem;
  padding-left: 1rem;
}

@media (max-width: 22.4375rem) {
  .emotion-9 {
    display: none;
  }
}

.emotion-11 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #F2F2F2;
  -webkit-background-position: center center;
  background-position: center center;
  background-repeat: no-repeat;
  -webkit-background-size: 60px 17px;
  background-size: 60px 17px;
  padding-bottom: 100%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

@media (min-width: 25rem) {
  .emotion-11 {
    -webkit-background-size: 77px 22px;
    background-size: 77px 22px;
  }
}

@media (min-width: 63rem) {
  .emotion-11 {
    -webkit-background-size: 93px 27px;
    background-size: 93px 27px;
  }
}

.emotion-13 {
  display: block;
  width: 100%;
  visibility: visible;
}

.emotion-15 {
  -ms-grid-column: 2;
  margin-bottom: 1rem;
}

.emotion-18 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  display: block;
  margin: 0;
  padding: 2rem 0;
  padding: 2rem 0 1rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-18 {
    font-size: 1.75rem;
    line-height: 2.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-18 {
    font-size: 2.5rem;
    line-height: 3.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-18 {
    padding: 2.5rem 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-18 {
    padding: 2rem 0 1rem;
  }
}

@media (max-width: 62.9375rem) {
  .emotion-18 {
    padding: 2rem 0 0.5rem;
  }
}

.emotion-20 {
  display: inline-block;
  width: 100%;
  padding-bottom: 0.5rem;
  word-break: break-word;
  font-size: 1.25rem;
  line-height: 1.75rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-20 {
    font-size: 1.375rem;
    line-height: 1.875rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-20 {
    font-size: 1.75rem;
    line-height: 2.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-20 {
    padding-bottom: 0;
    word-break: break-word;
    line-height: 3.5rem;
  }
}

.emotion-22 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-24 {
  font-size: 1.25rem;
  line-height: 1.75rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  margin: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-24 {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-24 {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

.emotion-26 {
  font-size: 0.9375rem;
  line-height: 1.5rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
  color: #6E6E73;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-26 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-26 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

@media (max-width: 62.9375rem) {
  .emotion-26 {
    padding-bottom: 0.5rem;
  }
}

.emotion-28 {
  position: relative;
}

.emotion-30 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.no-js .emotion-30 {
  display: none;
}

.emotion-32 {
  width: 64px;
  height: 64px;
  stroke: currentColor;
  will-change: transform;
}

@media (prefers-reduced-motion: no-preference) {
  .emotion-32 {
    -webkit-animation: animation-0 1.1s 3 linear;
    animation: animation-0 1.1s 3 linear;
  }
}

.emotion-35 amp-iframe,
.emotion-35 div>iframe {
  width: calc(100% + 1rem);
  margin: 0 -0.5rem;
}

@media (min-width: 25rem) {
  .emotion-35 amp-iframe,
  .emotion-35 div>iframe {
    width: calc(100% + 2rem);
    margin: 0 -1rem;
  }
}

.emotion-37 {
  height: 165px;
  position: relative;
  margin-bottom: 1rem;
}

@media (min-width: 63rem) {
  .emotion-37 {
    margin-bottom: 2rem;
  }
}

.emotion-39 {
  border: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

<div>
  <noscript />
  <div>
    chartbeat
  </div>
  <main
    class="emotion-0 emotion-1 emotion-2"
    dir="rtl"
    role="main"
  >
    <div
      class="emotion-3 emotion-2"
      dir="rtl"
    >
      <div
        class="emotion-5 emotion-6"
        dir="rtl"
      >
        <div
          class="emotion-7 emotion-8"
        >
          <div
            class="emotion-9 emotion-10"
            data-e2e="on-demand-image"
            dir="rtl"
          >
            <div
              class="emotion-11 emotion-12"
              data-e2e="image-placeholder"
            >
              <img
                alt="BBC News پښتو"
                class="emotion-13 emotion-14"
                sizes="(min-width: 1008px) 228px, 30vw"
                src="https://ichef.bbci.co.uk/images/ic/128x128/p08b23c8.png"
                srcset="https://ichef.bbci.co.uk/images/ic/128x128/p08b23c8.png 128w,https://ichef.bbci.co.uk/images/ic/240x240/p08b23c8.png 240w,https://ichef.bbci.co.uk/images/ic/480x480/p08b23c8.png 480w"
                width="240"
              />
            </div>
          </div>
        </div>
        <div
          class="emotion-15 emotion-16"
        >
          <h1
            class=" emotion-17 emotion-18 emotion-19"
            id="content"
            tabindex="-1"
          >
            <span
              role="text"
            >
              <span
                class="emotion-20 emotion-21"
              >
                ماښامنۍ خپرونه
              </span>
              <span
                class="emotion-22 emotion-23"
              >
                , 
              </span>
              <span
                class="emotion-24 emotion-25"
              >
                ۱ می ۲۰۲۰
              </span>
            </span>
          </h1>
          <p
            class="emotion-26 emotion-27"
          >
            د بي بي سي ورلډ سروس څخه پروګرام کول
          </p>
        </div>
      </div>
      <div
        class="emotion-28 emotion-29"
      >
        <div
          aria-hidden="true"
          class="emotion-30 emotion-31"
          data-testid="audio-loader-overlay"
        >
          <svg
            class="emotion-32 emotion-33"
            focusable="false"
            height="38"
            viewBox="0 0 38 38"
            width="38"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              stroke-width="2"
              transform="translate(1 1)"
            >
              <circle
                cx="18"
                cy="18"
                r="18"
                stroke-opacity="0.2"
              />
              <path
                d="M36 18c0-9.94-8.06-18-18-18"
              />
            </g>
          </svg>
        </div>
        <div
          class="emotion-34 emotion-35 emotion-36"
        >
          <div
            class="emotion-37 emotion-38"
            data-e2e="media-player"
          >
            <iframe
              allow="autoplay"
              allowfullscreen=""
              class="emotion-39 emotion-40"
              scrolling="no"
              src="https://test.bbc.com/ws/av-embeds/media/pashto/bbc_pashto_radio/w3ct0lz1/ps?morph_env=live"
              title="اډیو پلیئر"
            />
            <noscript />
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`OnDemand Radio Page  should show the 'content not yet available' message if episode is not yet available 1`] = `
.emotion-1 {
  width: 100%;
}

@supports (display: grid) {
  .emotion-1 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(8, 1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-1 {
      grid-template-columns: repeat(20, 1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width: 80rem) {
  .emotion-1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-3 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-3 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-3 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-3 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-3 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width: 80rem) {
  .emotion-3 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display: grid) {
  .emotion-3 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-3 {
      grid-template-columns: repeat(12, 1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
  }
}

.emotion-5 {
  display: grid;
  display: -ms-grid;
  -ms-grid-columns: 1fr 2fr;
  grid-template-columns: 1fr 2fr;
}

@media (min-width: 63rem) {
  .emotion-5 {
    padding-top: 1.5rem;
  }
}

@media (max-width: 24.9375rem) {
  .emotion-5 {
    -ms-grid-columns: 1fr;
    grid-template-columns: 1fr;
  }
}

.emotion-7 {
  -ms-grid-column: 1;
}

@media (max-width: 24.9375rem) {
  .emotion-7 {
    display: none;
  }
}

.emotion-9 {
  padding: 2rem 0 1.5rem;
  padding-right: 1rem;
}

@media (max-width: 22.4375rem) {
  .emotion-9 {
    display: none;
  }
}

.emotion-11 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #F2F2F2;
  -webkit-background-position: center center;
  background-position: center center;
  background-repeat: no-repeat;
  -webkit-background-size: 60px 17px;
  background-size: 60px 17px;
  padding-bottom: 100%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

@media (min-width: 25rem) {
  .emotion-11 {
    -webkit-background-size: 77px 22px;
    background-size: 77px 22px;
  }
}

@media (min-width: 63rem) {
  .emotion-11 {
    -webkit-background-size: 93px 27px;
    background-size: 93px 27px;
  }
}

.emotion-13 {
  display: block;
  width: 100%;
  visibility: visible;
}

.emotion-15 {
  -ms-grid-column: 2;
  margin-bottom: 1rem;
}

.emotion-18 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: "Apple SD Gothic Neo",AppleGothic,"Malgun Gothic",Dotum,"Noto Sans CJK KR",sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  display: block;
  margin: 0;
  padding: 2rem 0;
  padding: 2rem 0 1rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-18 {
    font-size: 2rem;
    line-height: 2.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-18 {
    font-size: 2.75rem;
    line-height: 3.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-18 {
    padding: 2.5rem 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-18 {
    padding: 2rem 0 1rem;
  }
}

@media (max-width: 62.9375rem) {
  .emotion-18 {
    padding: 2rem 0 0.5rem;
  }
}

.emotion-20 {
  display: inline-block;
  width: 100%;
  padding-bottom: 0.5rem;
  word-break: break-word;
  font-size: 1.25rem;
  line-height: 1.625rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-20 {
    font-size: 1.5rem;
    line-height: 1.875rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-20 {
    font-size: 1.75rem;
    line-height: 2.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-20 {
    padding-bottom: 0;
    word-break: break-word;
    line-height: 3.5rem;
  }
}

.emotion-22 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-24 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  font-family: "Apple SD Gothic Neo",AppleGothic,"Malgun Gothic",Dotum,"Noto Sans CJK KR",sans-serif;
  font-weight: 400;
  font-style: normal;
  margin: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-24 {
    font-size: 1.375rem;
    line-height: 1.875rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-24 {
    font-size: 1.5rem;
    line-height: 2.25rem;
  }
}

.emotion-26 {
  font-size: 1rem;
  line-height: 1.375rem;
  font-family: "Apple SD Gothic Neo",AppleGothic,"Malgun Gothic",Dotum,"Noto Sans CJK KR",sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
  color: #6E6E73;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-26 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-26 {
    font-size: 1rem;
    line-height: 1.75rem;
  }
}

@media (max-width: 62.9375rem) {
  .emotion-26 {
    padding-bottom: 0.5rem;
  }
}

.emotion-28 {
  position: relative;
  min-height: 165px;
  margin-bottom: 2rem;
}

.emotion-30 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.emotion-32 {
  font-family: "Apple SD Gothic Neo",AppleGothic,"Malgun Gothic",Dotum,"Noto Sans CJK KR",sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  background-color: rgba(34, 34, 34, 0.75);
}

@media (min-width: 37.5rem) {
  .emotion-32 {
    font-size: 0.875rem;
  }
}

@media screen and (-ms-high-contrast: active) {
  .emotion-32 {
    background-color: transparent;
  }
}

.emotion-34 {
  display: block;
  font-weight: normal;
  bottom: 0;
  position: absolute;
  padding: 0.5rem;
}

@media screen and (-ms-high-contrast: active) {
  .emotion-34 {
    background-color: window;
  }
}

@media (min-width: 25rem) {
  .emotion-34 {
    padding: 1rem;
  }
}

<div>
  <noscript />
  <div>
    chartbeat
  </div>
  <main
    class="emotion-0 emotion-1 emotion-2"
    dir="ltr"
    role="main"
  >
    <div
      class="emotion-3 emotion-2"
      dir="ltr"
    >
      <div
        class="emotion-5 emotion-6"
        dir="ltr"
      >
        <div
          class="emotion-7 emotion-8"
        >
          <div
            class="emotion-9 emotion-10"
            data-e2e="on-demand-image"
            dir="ltr"
          >
            <div
              class="emotion-11 emotion-12"
              data-e2e="image-placeholder"
            >
              <img
                alt="BBC News 코리아"
                class="emotion-13 emotion-14"
                sizes="(min-width: 1008px) 228px, 30vw"
                src="https://ichef.bbci.co.uk/images/ic/128x128/p08b8lzc.png"
                srcset="https://ichef.bbci.co.uk/images/ic/128x128/p08b8lzc.png 128w,https://ichef.bbci.co.uk/images/ic/240x240/p08b8lzc.png 240w,https://ichef.bbci.co.uk/images/ic/480x480/p08b8lzc.png 480w"
                width="240"
              />
            </div>
          </div>
        </div>
        <div
          class="emotion-15 emotion-16"
        >
          <h1
            class=" emotion-17 emotion-18 emotion-19"
            id="content"
            tabindex="-1"
          >
            <span
              role="text"
            >
              <span
                class="emotion-20 emotion-21"
              >
                BBC 코리아 라디오
              </span>
              <span
                class="emotion-22 emotion-23"
              >
                , 
              </span>
              <span
                class="emotion-24 emotion-25"
              >
                2020년 5월 4일
              </span>
            </span>
          </h1>
          <p
            class="emotion-26 emotion-27"
          >
            한반도와 세계 곳곳의 다양한 소식을 공정하고 객관적으로 전달해 드립니다.
          </p>
        </div>
      </div>
      <div
        class="emotion-28 emotion-29"
      >
        <div
          class="emotion-30 emotion-31"
        >
          <div
            class="emotion-32 emotion-33"
          >
            <strong
              class="emotion-34 emotion-35"
            >
              아직 재생할 수 없는 프로그램입니다.
            </strong>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`OnDemand Radio Page  should show the expired content message if episode is expired 1`] = `
.emotion-1 {
  width: 100%;
}

@supports (display: grid) {
  .emotion-1 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(8, 1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-1 {
      grid-template-columns: repeat(20, 1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width: 80rem) {
  .emotion-1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-3 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-3 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-3 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-3 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-3 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width: 80rem) {
  .emotion-3 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display: grid) {
  .emotion-3 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-3 {
      grid-template-columns: repeat(12, 1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
  }
}

.emotion-5 {
  display: grid;
  display: -ms-grid;
  -ms-grid-columns: 1fr 2fr;
  grid-template-columns: 1fr 2fr;
}

@media (min-width: 63rem) {
  .emotion-5 {
    padding-top: 1.5rem;
  }
}

@media (max-width: 24.9375rem) {
  .emotion-5 {
    -ms-grid-columns: 1fr;
    grid-template-columns: 1fr;
  }
}

.emotion-7 {
  -ms-grid-column: 1;
}

@media (max-width: 24.9375rem) {
  .emotion-7 {
    display: none;
  }
}

.emotion-9 {
  padding: 2rem 0 1.5rem;
  padding-right: 1rem;
}

@media (max-width: 22.4375rem) {
  .emotion-9 {
    display: none;
  }
}

.emotion-11 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #F2F2F2;
  -webkit-background-position: center center;
  background-position: center center;
  background-repeat: no-repeat;
  -webkit-background-size: 60px 17px;
  background-size: 60px 17px;
  padding-bottom: 100%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

@media (min-width: 25rem) {
  .emotion-11 {
    -webkit-background-size: 77px 22px;
    background-size: 77px 22px;
  }
}

@media (min-width: 63rem) {
  .emotion-11 {
    -webkit-background-size: 93px 27px;
    background-size: 93px 27px;
  }
}

.emotion-13 {
  display: block;
  width: 100%;
  visibility: visible;
}

.emotion-15 {
  -ms-grid-column: 2;
  margin-bottom: 1rem;
}

.emotion-18 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: "Apple SD Gothic Neo",AppleGothic,"Malgun Gothic",Dotum,"Noto Sans CJK KR",sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  display: block;
  margin: 0;
  padding: 2rem 0;
  padding: 2rem 0 1rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-18 {
    font-size: 2rem;
    line-height: 2.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-18 {
    font-size: 2.75rem;
    line-height: 3.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-18 {
    padding: 2.5rem 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-18 {
    padding: 2rem 0 1rem;
  }
}

@media (max-width: 62.9375rem) {
  .emotion-18 {
    padding: 2rem 0 0.5rem;
  }
}

.emotion-20 {
  display: inline-block;
  width: 100%;
  padding-bottom: 0.5rem;
  word-break: break-word;
  font-size: 1.25rem;
  line-height: 1.625rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-20 {
    font-size: 1.5rem;
    line-height: 1.875rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-20 {
    font-size: 1.75rem;
    line-height: 2.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-20 {
    padding-bottom: 0;
    word-break: break-word;
    line-height: 3.5rem;
  }
}

.emotion-22 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-24 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  font-family: "Apple SD Gothic Neo",AppleGothic,"Malgun Gothic",Dotum,"Noto Sans CJK KR",sans-serif;
  font-weight: 400;
  font-style: normal;
  margin: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-24 {
    font-size: 1.375rem;
    line-height: 1.875rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-24 {
    font-size: 1.5rem;
    line-height: 2.25rem;
  }
}

.emotion-26 {
  font-size: 1rem;
  line-height: 1.375rem;
  font-family: "Apple SD Gothic Neo",AppleGothic,"Malgun Gothic",Dotum,"Noto Sans CJK KR",sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
  color: #6E6E73;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-26 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-26 {
    font-size: 1rem;
    line-height: 1.75rem;
  }
}

@media (max-width: 62.9375rem) {
  .emotion-26 {
    padding-bottom: 0.5rem;
  }
}

.emotion-28 {
  position: relative;
  min-height: 165px;
  margin-bottom: 2rem;
}

.emotion-30 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.emotion-32 {
  font-family: "Apple SD Gothic Neo",AppleGothic,"Malgun Gothic",Dotum,"Noto Sans CJK KR",sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  background-color: rgba(34, 34, 34, 0.75);
}

@media (min-width: 37.5rem) {
  .emotion-32 {
    font-size: 0.875rem;
  }
}

@media screen and (-ms-high-contrast: active) {
  .emotion-32 {
    background-color: transparent;
  }
}

.emotion-34 {
  display: block;
  font-weight: normal;
  bottom: 0;
  position: absolute;
  padding: 0.5rem;
}

@media screen and (-ms-high-contrast: active) {
  .emotion-34 {
    background-color: window;
  }
}

@media (min-width: 25rem) {
  .emotion-34 {
    padding: 1rem;
  }
}

<div>
  <noscript />
  <div>
    chartbeat
  </div>
  <main
    class="emotion-0 emotion-1 emotion-2"
    dir="ltr"
    role="main"
  >
    <div
      class="emotion-3 emotion-2"
      dir="ltr"
    >
      <div
        class="emotion-5 emotion-6"
        dir="ltr"
      >
        <div
          class="emotion-7 emotion-8"
        >
          <div
            class="emotion-9 emotion-10"
            data-e2e="on-demand-image"
            dir="ltr"
          >
            <div
              class="emotion-11 emotion-12"
              data-e2e="image-placeholder"
            >
              <img
                alt="BBC News 코리아"
                class="emotion-13 emotion-14"
                sizes="(min-width: 1008px) 228px, 30vw"
                src="https://ichef.bbci.co.uk/images/ic/128x128/p08b8lzc.png"
                srcset="https://ichef.bbci.co.uk/images/ic/128x128/p08b8lzc.png 128w,https://ichef.bbci.co.uk/images/ic/240x240/p08b8lzc.png 240w,https://ichef.bbci.co.uk/images/ic/480x480/p08b8lzc.png 480w"
                width="240"
              />
            </div>
          </div>
        </div>
        <div
          class="emotion-15 emotion-16"
        >
          <h1
            class=" emotion-17 emotion-18 emotion-19"
            id="content"
            tabindex="-1"
          >
            <span
              role="text"
            >
              <span
                class="emotion-20 emotion-21"
              >
                BBC 코리아 라디오
              </span>
              <span
                class="emotion-22 emotion-23"
              >
                , 
              </span>
              <span
                class="emotion-24 emotion-25"
              >
                2020년 5월 4일
              </span>
            </span>
          </h1>
          <p
            class="emotion-26 emotion-27"
          >
            한반도와 세계 곳곳의 다양한 소식을 공정하고 객관적으로 전달해 드립니다.
          </p>
        </div>
      </div>
      <div
        class="emotion-28 emotion-29"
      >
        <div
          class="emotion-30 emotion-31"
        >
          <div
            class="emotion-32 emotion-33"
          >
            <strong
              class="emotion-34 emotion-35"
            >
              더 이상 이용할 수 없는 콘텐츠입니다.
            </strong>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;
